# gtm-engine

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  gtm-engine-spec (1).docx  gtm-engine-spec.md  railway.json  render.yaml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/agents/: __init__.py  base_agent.py  content_agent.py  deal_intel_agent.py  icp_agent.py  outbound_agent.py  retention_agent.py
backend/api/: __init__.py  dependencies.py  main.py
backend/api/routers/: __init__.py  agents.py  analytics.py  approvals.py  auth.py  campaigns.py  (+11 more)
backend/core/: __init__.py  audit_logger.py  auth.py  cache.py  circuit_breaker.py  context_builder.py  encryption.py  exceptions.py  llm_router.py  logging_config.py  memory.py  metrics.py  orchestrator.py  permissions.py  prompt_manager.py  rate_limiter.py  retry.py  secrets.py
backend/db/: __init__.py  base_repository.py  models.py  session.py
backend/enrichment/: __init__.py  intent_signals.py  profile_enricher.py  social_scraper.py  transcript_parser.py
backend/integrations/: __init__.py
backend/prompts/: content_generation.txt  deal_intelligence.txt  icp_scoring.txt  outbound_personalization.txt  retention_analysis.txt
backend/services/: __init__.py  analytics_service.py  approval_service.py  base.py  campaign_service.py  company_service.py  deal_service.py  integration_service.py  lead_service.py  settings_service.py  state.py  user_service.py
backend/tests/: conftest.py
backend/workers/: __init__.py  celery_app.py  tasks.py
(+159 files in other folders)
